EM-57 Add config, update readme